# gesture

./: CMakeLists.txt  README.md  build.sh  clean.sh
src/hello-world/: CMakeLists.txt  main.cpp
